# hermes-recipes

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  plugin.yaml  pyproject.toml
docs/: INSTALL.md  MAPPING.md
hermes_recipes/: __init__.py  _cli.py  agent_config.py  bindings.py  constants.py  cron_reconcile.py  cron_translate.py  cron_utils.py  fs_utils.py  lanes.py  recipe_frontmatter.py  recipe_id.py  recipe_lint.py  recipe_loader.py  scaffold.py  scaffold_templates.py  scaffold_utils.py  skill_install.py  stable_stringify.py  template.py  ticket_finder.py  ticket_workflow.py  tickets.py  workspace.py
hermes_recipes/bundled_recipes/: development-team.md  marketing-team.md
hermes_recipes/integrations/: __init__.py  hermes_cron.py  hermes_profiles.py
scripts/: install_dir_plugin.sh
tests/: test_agent_config.py  test_bindings.py  test_bundled_recipes.py  test_cli.py  test_cli_scaffold.py  test_cron_reconcile.py  test_cron_translate.py  test_cron_utils.py  test_integrations.py  test_lanes.py  test_media_drivers.py  test_outbound_client.py  test_outbound_sanitize.py  test_plugin_discovery.py  test_recipe_frontmatter.py  test_recipe_id.py  test_recipe_lint.py  test_recipe_loader.py  test_scaffold.py  test_scaffold_templates.py  test_scaffold_utils.py  test_skill_install.py  test_stable_stringify.py  test_template.py  test_ticket_finder.py  test_ticket_workflow.py  test_tickets.py  test_workflow_approvals.py  test_workflow_error_classify.py  test_workflow_lock_liveness.py  test_workflow_queue.py  test_workflow_runner.py  test_workflow_utils.py  test_workspace.py
(+17 files in other folders)
